test/errors/parsing/parser_recovery_fail.hy
// Regression: ensure parser consumes a token when a statement fails to parse
int main()
{
    default
    return 0
}
